--- a/backend/include/flash.ejs
+++ b/backend/include/flash.ejs
@@ -2,7 +2,7 @@
 <style>
   .custom-alert {
     font-family: monospace;
-    color: wheat;
+    color: black;
     text-transform: capitalize;
     position: fixed;
     top: 4rem;
