--- a/backend/views/search.ejs
+++ b/backend/views/search.ejs
@@ -1,8 +1,13 @@
 <%layout("../layout/plate.ejs")%>
-<body>
- 
-  <div class="container">
-    <% for ( data of data) { %>
+
+<h2 class="prompt">Search Results for "<%= searchQuery %>"</h2>
+
+<% if (results.length === 0) { %>
+<h2 class="resultiszero">No videos found.</h2>
+<% } else { %>
+    <div class="container">
+  <% results.forEach(data => { %>
+
     <div class="card">
       <a href="/video/<%=data._id%>/show">
         <div class="thumbnail">
@@ -23,7 +28,7 @@
         </div>
       </a>
     </div>
-
-    <% } %>
-  </div>
-</body>
+    <% }) %>
+    <%}%>
+</div>
+</div>
