--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -8,6 +8,11 @@
   --bgcolor: #191a1b;
   --fgcolor: white;
 }
+.input {
+  border: none;
+  outline: none;
+  background: transparent;
+}
 body {
   min-height: 100vh;
   width: 100vw;
@@ -50,18 +55,6 @@ header {
 .container-fluid .rightsides a:hover {
   transform: translateY(3px);
   color: cornsilk;
-}
-.search-input {
-  position: absolute;
-  inset: 0;
-  left: 20rem;
-  width: 25vw;
-  padding: 0.8rem;
-  border: 1px solid rgba(255, 255, 255, 0.8);
-  border-radius: 12px;
-  background-color: rgba(255, 255, 255, 0.05);
-  color: white;
-  /* box-shadow: 0 0 8px rgba(0, 255, 255, 0.3); */
 }
 
 .btn-search::before {
@@ -164,6 +157,82 @@ header {
 }
 .main-userIcon .uploader-info .logout a {
   color: beige;
+}
+/* home.ejs  search.ejs */
+.search-input {
+  position: absolute;
+  inset: 0;
+  left: 20rem;
+  width: 25vw;
+  padding: 0.8rem;
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  border-radius: 12px;
+  background-color: rgba(255, 255, 255, 0.05);
+  color: white;
+  /* box-shadow: 0 0 8px rgba(0, 255, 255, 0.3); */
+}
+.prompt {
+  margin-left: 2rem;
+  color: aliceblue;
+}
+
+.resultiszero {
+  height: 100vh;
+  font-size: 3rem;
+  color: white;
+  margin: 3rem 0 0 2rem;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+a {
+  text-decoration: none;
+}
+.card {
+  color: #666;
+  background-color: #333;
+  width: 400px;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(130, 119, 119, 0.1);
+  transition: transform 0.3s;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.thumbnail img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.video-player video {
+  display: none;
+  width: 400px;
+  height: 400px;
+  aspect-ratio: 1/1;
+  /* display: block; */
+  margin-top: 5px;
+}
+
+.card-info {
+  padding: 15px;
+}
+
+.card-info h3 {
+  font-size: 1.1rem;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.card-info p {
+  font-size: 0.95rem;
+  color: #666;
 }
 @media (max-width: 768px) {
   body {
