--- a/backend/include/header.ejs
+++ b/backend/include/header.ejs
@@ -6,7 +6,6 @@
       </div>
       <div >
         <form action="/search" method="get">
-
           <input style="display: none;"
           class="form-control me-2 search-input"
           type="search"
@@ -14,6 +13,8 @@
           required
           placeholder="Search Videos..."
            />  
+           <!-- live serach show -->
+           <div id="resultsfrinput"></div>
           <button type="submit" class="btn-search-input"  style="cursor: pointer;display: none ; z-index: 200; margin-left: 25rem; " >🔍</button>
         </form>
         </div>
