--- a/backend/views/show.ejs
+++ b/backend/views/show.ejs
@@ -115,7 +115,7 @@
         <span><h3><%=vid.title%></h3></span>
         <span><h3><%=vid.description%></h3></span>
         <div class="tag">
-          <% for(tag of vid.tags) { %>
+          <% for(tag of vid.video.tags) { %>
           <h1><%=tag%></h1>
           <% }%>
         </div>
